syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.smartretail";
option java_outer_classname = "SmartShelfProto";


service SmartShelfService {
  rpc GetShelfInfo (GetShelfInfoRequest) returns (stream GetShelfInfoResponse) {}
}

message GetShelfInfoRequest {
  string shelfId = 1;
}

message GetShelfInfoResponse {
  string shelfId = 1;
  string productId = 2;
  int32 quantity = 3;
}